--- a/www/assets/css/header.css
+++ b/www/assets/css/header.css
@@ -14,3 +14,41 @@ section.logo h1 {
     font-size: 38px;
     line-height: 57px;
 }
+
+section.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 70px;
+}
+
+section.header h1 {
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 52px;
+}
+
+section.header .search {
+    --color: black;
+    font-size: 20px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    background-color: white;
+    border-radius: 15px;
+    gap: 10px;
+    padding: 0 10px;
+    width: 350px;
+}
+
+section.header .search input {
+    border: none;
+    outline: none;
+    background: none;
+    width: 100%;
+    line-height: 30px;
+}
+
+section.header .search input::placeholder {
+    color: inherit;
+}
