fix: use png icons (easier)

--- a/www/assets/css/header.css
+++ b/www/assets/css/header.css
@@ -41,6 +41,11 @@ section.header .search {
     width: 350px;
 }
 
+
+section.header .search img {
+    height: 20px;
+}
+
 section.header .search input {
     border: none;
     outline: none;
