--- a/www/assets/css/header.css
+++ b/www/assets/css/header.css
@@ -1,7 +1,8 @@
 section.logo {
     display: flex;
     align-items: center;
-    justify-content: center;
+    padding-left: 50px;
+    justify-content: start;
     gap: 4px;
 }
 
