--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -7,7 +7,7 @@ body {
     grid-template-columns: 4fr 6fr 4fr;
     grid-template-rows: 2fr 12fr 4fr;
     grid-template-areas: 
-        "logo header sidebar"
+        "logo header account"
         "menu metrics sidebar"
         "logout history sidebar";
     background-color: black;
@@ -24,6 +24,7 @@ section.header { grid-area: header }
 section.menu { grid-area: menu }
 section.metrics { grid-area: metrics }
 section.history { grid-area: history }
+section.account { grid-area: account }
 section.sidebar { grid-area: sidebar }
 section.logout { grid-area: logout }
 
