--- a/www/assets/css/metrics.css
+++ b/www/assets/css/metrics.css
@@ -77,6 +77,8 @@ section.metrics .tabs .bar span.current {
 
 section.metrics .graph {
     grid-area: graph;
-    width: 100%;
     margin-top: 20px;
+    max-width: 50vw;
+    max-height: 45vh;
+    margin: auto auto;
 }
